[Feat] styled popup & small refactor

--- a/plugin/extension/popup.html
+++ b/plugin/extension/popup.html
@@ -6,11 +6,15 @@
   <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
 </head>
 <body>
-  <div id='form-inline'>
-    <input type='text' id="symbolValue" />
-    <button type='button' id='symbolBtn'>Add</button>
+  <div id='container'>
+    <div id='message'>
+      <p id='inputText'>Enter a symbol to add</p>
+    </div>
+    <form>
+      <input type='text' id='symbolValue' autocomplete='off'/>
+      <button type='button' id='symbolBtn'>Add</button>
+    </form>
   </div>
-  <p id='inputText'>Enter a symbol to add</p>
 
   <div id='separator'></div>
 
