Started styling ticker

--- a/plugin/extension/popup.html
+++ b/plugin/extension/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='UTF-8'>
   <title>Minimal Stock Ticker</title>
-  <link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="assets/styles/popup.css">
 </head>
 <body>
   <div id='container'>
