iframe displaying on single frame, not subframes now

--- a/plugin/extension/stockTicker.html
+++ b/plugin/extension/stockTicker.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Stock Ticker</title>
-  <script type='text/javascript' src='toolbar.js'></script>
+  <script type='text/javascript' src='js/ticker.min.js'></script>
+  <link rel="stylesheet" type="text/css" href="assets/styles/content.css">
 </head>
 <body id='stockTicker'>
   
