[Styling] centered text

--- a/plugin/extension/popup.html
+++ b/plugin/extension/popup.html
@@ -21,6 +21,10 @@
   <p id='directions'>Click to remove symbol</p>
   <div id='displaySymbols'></div>
 
+  <div id='separator'></div>
+
+  <button type='button' id='blacklist'>Blacklist page</button>
+  
   <script src='js/popup.min.js'></script>
 </body>
 </html>
