--- a/plugin/extension/popup.html
+++ b/plugin/extension/popup.html
@@ -8,6 +8,10 @@
 <body>
   <div id='container'>
     <div class='centered'>
+      <div id='disabled'>
+        Ticker does not work on this site
+        <div id='separator'></div>
+      </div>
       <div id='message'>
         <p id='inputText'>Enter a symbol to add</p>
       </div>
